<resources>
    <string name="app_name">Plann.er</string>
    <string name="nome">Nome</string>
    <string name="email">Email</string>
    <string name="telefone">Telefone</string>
    <string name="cadastro_de_usuario">Cadastro de Usuário</string>
    <string name="botao_adicionar_foto_de_usuario">Botão adicionar foto de usuário</string>
    <string name="salvar_usuario">Salvar usuário</string>
    <string name="imagem_logo">Imagem logo</string>
    <string name="imagem_foto_do_usuario">Imagem foto do usuário</string>
    <string name="ola_usuario">Olá, <b>%1$s!</b></string>
    <string name="qual_a_atividade">Qual a atividade?</string>
    <string name="escolha_a_data">Escolha a data</string>
    <string name="salvar_atividade">Salvar atividade</string>
    <string name="escolha_o_horario">Escolha o horário</string>
    <string name="atividades">Atividades</string>
    <string name="botao_de_conclusao_de_atividade">Botão de conclusão de atividade</string>
    <string name="alterar_atividade">Alterar Atividade</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="new_activity_err_msg">Ocorreu um erro ao salvar essa atividade.</string>
    <string name="excluir_atividade"><u>Excluir Atividade</u></string>
</resources>