<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/md_16dp"
    tools:context=".ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clHomeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagem_logo"
            android:src="@drawable/img_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/userPhotoCardView"
            android:layout_width="@dimen/xl_64dp"
            android:layout_height="@dimen/xl_64dp"
            android:layout_marginTop="@dimen/md_16dp"
            app:cardCornerRadius="@dimen/xm_32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivLogo"
            app:strokeColor="@color/zinc_700"
            app:strokeWidth="@dimen/xxs_2dp">

            <ImageView
                android:id="@+id/ivUserPhoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/imagem_foto_do_usuario"
                android:src="@drawable/img_this_person_does_not_exist" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/md_16dp"
            android:text="@string/ola_usuario"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/userPhotoCardView"
            app:layout_constraintStart_toEndOf="@id/userPhotoCardView"
            app:layout_constraintTop_toTopOf="@id/userPhotoCardView" />

        <LinearLayout
            android:id="@+id/llNewActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/sm_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/userPhotoCardView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNewActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/ic_tag"
                android:layout_marginBottom="@dimen/sm_8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewActivity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/qual_a_atividade"
                    android:inputType="textCapSentences"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNewActivityDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/sm_8dp"
                app:startIconDrawable="@drawable/ic_calendar">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewActivityDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/escolha_a_data" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutNewActivityTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_marginBottom="@dimen/sm_8dp"
                app:startIconDrawable="@drawable/ic_clock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewActivityTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/escolha_o_horario"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_16dp"
            android:textColor="@color/lime_950"
            android:text="@string/salvar_atividade"
            app:layout_constraintTop_toBottomOf="@id/llNewActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
        
        <TextView
            android:id="@+id/tvActivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/atividades"
            style="@style/Title"
            android:layout_marginTop="@dimen/md_16dp"
            app:layout_constraintTop_toBottomOf="@id/btnSaveActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvActivities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_16dp"
            tools:itemCount="8"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/tvActivities"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_activity"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>